# GoFA-Remake

./: .gitignore  README-CHN.md  README.md  package-lock.json
.fitten/rules/: code_style.md  error_handling.md  jsdoc_style.md  project_background.md
.github/: FUNDING.yml
admin-server/: .env.example  index.js  package-lock.json  package.json  routes.js
admin-server/libs/: RequestLogger.js
admin-server/views/: index.html  map.html
admin_tools/: index.js  package-lock.json  package.json
admin_tools/test/: index.test.js
client/: package.json
client/temp/: startup.json  tsconfig.cocos.json
docs/: 产品整体结构图.md
docs/data_models/: GoFA-Remake-202562011156.xlsx  (+4 more)
references/: API文档.md  Software requirements specification SRS template.docx  产品整体结构图.md  前后端交互API.md  数据结构.js
server/: .env  1  Dockerfile  a.js  common-functions-GoFA.js  index.js  jsdoc.json  main.js  package-lock.json  package.json
server/src/cpp_addons/CPP_ship_combat_calc/: CARRIER.cpp  CARRIER.h  CMakeLists.txt  CPP_Combat_Calculate  CPP_ship_combat_calc.cpp  Makefile  PARTICIPANT.cpp  PARTICIPANT.h  PARTICIPANTS.cpp  PARTICIPANTS.h  SHIP.cpp  SHIP.h  SHIP_STATS.cpp  SHIP_STATS.h  SIDE.cpp  SIDE.h  SITUATION.cpp  SITUATION.h  TROOPS.cpp  TROOPS.h  package-lock.json  package.json
server/src/cpp_addons/CPP_ship_combat_calc/doc/images/sources/: combat_caculate_entities.pu  combat_calculate_algorithm.pu  combat_calculate_entities.pu  combat_calculate_states.pu
server/src/cpp_addons/CPP_ship_combat_calc/tests/: CMakeLists.txt  CPP_Combat_Calculate_Tests  Makefile  TROOPS.test.cpp  main.test.cpp
(+184 files in other folders)
